<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >
 
		<TextView
		    android:id="@+id/lengthOfPoolTextView"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/lengthOfPool"
		    android:textSize="10pt" >
		</TextView>
	
		<LinearLayout
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal" >
		    
		    <EditText
		        android:id="@+id/distance"
		        android:layout_width="151dp"
		        android:layout_height="wrap_content"
		        android:hint="@string/lengthOfPoolDefault"
		        android:inputType="number" >
			    <requestFocus />
			</EditText>
			
		    <Spinner
		        android:id="@+id/poolMeasurementsSpinner"
		        android:layout_width="174dp"
		        android:layout_height="wrap_content"
		        android:entries="@array/poolMeasurements"
		        android:prompt="@string/lengthOfPool" />
		</LinearLayout>
		
		<LinearLayout
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal" >
		    
		    <TextView
			    android:id="@+id/numOflengths"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:text="@string/numOfLengths"
			    android:textSize="10pt" >
			</TextView>
			
		    <EditText
		        android:id="@+id/numOfLengthsInput"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:hint="@string/numOfLengthsDefault"
		        android:inputType="number" >
			</EditText>
		</LinearLayout>
		
		<LinearLayout
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal" >
	
			<TextView
			    android:id="@+id/TextViewTitle"
			    android:layout_width="165dp"
			    android:layout_height="wrap_content"
			    android:text="@string/convertTo"
			    android:textSize="10pt" >
			</TextView>
			
			<Spinner
			    android:id="@+id/distanceMeasurementsSpinner"
			    android:layout_width="156dp"
			    android:layout_height="wrap_content"
			    android:entries="@array/distanceMeasurements"
			    android:prompt="@string/convertTo" />
			
		</LinearLayout>
		
		<TextView
		    android:id="@+id/converted"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/converted"
		    android:textSize="10pt" >
		</TextView>

    </LinearLayout>
</ScrollView>